--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -10,16 +10,15 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Synchronize view</h3>
-<P>The Team perspective contains a Synchronize view. You don't actually have to
-be in the team perspective to use this view. As we learned in the Basic tutorial
-we could easily add this view to our Resource perspective. (Perspective &gt;
-Show View)&nbsp; &nbsp;
+<P>The Synchronize view provides you with a single place where you can see both
+the changes you've made, and changes others have made and committed to the
+repository.  In addition to providing a combined <i>local + remote</i> resource tree,
+it allows you to put your changes in the repository (commit), and get the changes
+others have made (update).
 </P>
 
-
-<P>Let's take a look at the Synchronize view in more detail .
+<P>Let's take a look at the Synchronize view in more detail.
 </P>
-
 
 <blockquote>
   <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg" width="484" height="364">
@@ -28,33 +27,33 @@ Show View)&nbsp; &nbsp;
 
 </blockquote>
 <P CLASS="Para">The first thing to notice is that the title of the view indicates
-we are in &quot;Release Mode&quot; and the Release Mode button (see A) is pressed
-in. Release mode allows us to release changes we have made locally to
-the repository. By default if you Synchronize With Stream and the stream has no
-changes for you to catch up to, you are automatically placed into release mode
-to let you quickly release your changes.&nbsp;&nbsp;We'll come back to
-&quot;Catch Up&quot;
-a little later.</P>
-<P>In &quot;Release Mode&quot; the top area (#1) shows all of the resources that
-need to be released.
+we are in &quot;Outgoing Mode&quot; and the Outgoing Mode button (see A) is pressed
+in. Outgoing mode allows us to commit changes we have made locally to
+the repository. By default if you Synchronize with Repository and the repository has no
+changes for you to take, you are automatically placed into outgoing mode
+to let you quickly commit your changes.  We'll come back to
+&quot;Incomming Mode&quot;a little later.
+</P>
+
+<P>In &quot;Outgoing Mode&quot; the top area (#1) shows all of the resources that
+need to be committed.
 </P>
 
 
 <P>The bottom area (#2 &amp; #3) is the text compare area we worked with in the basic
 tutorial. By selecting a resource in the Structured Compare list the lower area
-displays the differences between what we have in the workbench (#2) versus what is currently in the repository's stream
-(#3).&nbsp;
+displays the differences between what we have in the workbench (#2) versus what is currently
+in the repository (#3).
 </P>
 
 
-<P>Toolbar buttons (A) allow you to switch between release mode and other
+<P>Toolbar buttons (A) allow you to switch between outgoing mode and other
 synchronization modes that we will examine in a later section.
 </P>
 
 
 <p>The lower toolbar (B) allows you to merge changes between your file and the
 repository copy of the file.</p>
-<p>&nbsp;</p>
 <P><br>
 <img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
 </P>
