--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -4,14 +4,14 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Releasing</title>
+<title>Committing</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Releasing</h3>
+Committing</h3>
 <P>Now that we have a better understanding of the Synchronize view let's go
-ahead and release the work we have done.
+ahead and commit the work we have done.
 </P>
 
 
@@ -44,7 +44,7 @@ In the Structured Compare list select file1.txt</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Popup the menu and choose Release. Click OK when asked to supply a release
+Popup the menu and choose Commit. Click OK when asked to supply a commit
 comment.</P>
 </TD>
 </TR>
@@ -56,12 +56,12 @@ comment.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-Observe that file1.txt is no longer&nbsp;in the list.
+Observe that file1.txt is no longer in the list.
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_release2.jpg" width="176" height="98"></p>
 </blockquote>
-  <p>In addition to releasing individual resources we can also select
-the project and release all of the changes in the project.</p>
+  <p>In addition to committing individual resources we can also select
+the project and commit all of the changes in the project.</p>
 </TD>
 </TR>
 <TR>
@@ -77,9 +77,9 @@ Select JanesTeamProject.
 <b>5.</b>
 </TD>
 <TD valign="top" align="left">
-Choose Release from the project's context menu and type in &quot;my first
-project&quot; when prompted for a release comment.
-<p>Observe that the remaining resources in the project are released and the
+Choose Commit from the project's context menu and type in &quot;my first
+project&quot; when prompted for a commit comment.
+<p>Observe that the remaining resources in the project are committed and the
 structure compare list is now empty.&nbsp;</p>
 </TD>
 </TR>
@@ -116,8 +116,8 @@ contents:
 </TD>
 <TD valign="top" align="left">
 Select the project (JanesTeamProject) and choose Team &gt; Synchronize with
-Stream again from the context menu.
-<p>Notice we are not prompted for the repository location.&nbsp; When the
+Repository again from the context menu.
+<p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" width="282" height="113"></p>
@@ -129,7 +129,7 @@ Synchronize view opens, there is only one change, the new file3.txt.</p>
 <b>9.</b>
 </TD>
 <TD valign="top" align="left">
-Select file3.txt, and choose Release from the context menu.&nbsp;
+Select file3.txt, and choose Commit from the context menu.
 </TD>
 </TR>
 </TBODY>
