--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
@@ -10,31 +10,30 @@
 <BODY BGCOLOR="#ffffff">
 <h2>
 Working with another user</h2>
-<P>We have seen how to create a project and release it to the HEAD stream. We
-first specified our repository location. Next we synchronized our project and
-selected a repository, and the HEAD stream.&nbsp; Finally we
-released the resources using the Synchronize view.
+<P>We have seen how to create a project and commit it to the repository. We
+first specified our repository location. Next we shared our project with that location and
+the HEAD branch.  Then we synchronized our project to open the Synchronize view.  Finally
+we committed the resources using the Synchronize view.
 </P>
 
 
 <P>The repository currently contains our project and the three files that we
-released (file1.txt, file2.txt and file3.txt).
+committed (file1.txt, file2.txt and file3.txt).
 </P>
 
 
 <P>It's time to find that coworker (let's call him Fred) to work through some
 steps with you. In this section we will learn how two people can work on the
-same project and simultaneously release changes to the shared stream (typically
-HEAD).&nbsp; Specifically we will do the following:
+same project and simultaneously commit changes to the repository.  Specifically
+we will do the following:
 </P>
-
 
 <ul>
   <li>Fred will add the project to his workbench</li>
   <li>Fred will make changes to file1.txt and file2.txt</li>
   <li>You will simultaneously make changes to file2.txt and file3.txt</li>
-  <li>Fred will synchronize and release his (outgoing) changes to the two files.</li>
-  <li>You will synchronize to release your changes (see below) at which time you
+  <li>Fred will synchronize and commit his (outgoing) changes to the two files.</li>
+  <li>You will synchronize to commit your changes at which time you
     will discover there are outgoing (file3.txt), incoming (file1.txt) and
     conflicts (file2.txt).&nbsp;</li>
 </ul>
@@ -47,7 +46,7 @@ HEAD).&nbsp; Specifically we will do the following:
 </TD>
 <TD valign="top" width="481" align="left">
 <P CLASS="Para">
-Changes that are in the stream, which you have not yet caught up to.</P>
+Changes that are in the repsository, which you have not yet updated to.</P>
 </TD>
 </TR>
 <TR>
@@ -57,7 +56,7 @@ Changes that are in the stream, which you have not yet caught up to.</P>
 </TD>
 <TD valign="top" width="481" align="left">
 <P CLASS="Para">
-Changes that you are releasing.</P>
+Changes that you are committing.</P>
 </TD>
 </TR>
 <TR>
@@ -65,7 +64,7 @@ Changes that you are releasing.</P>
 <b>conflict</b>
 </TD>
 <TD valign="top" width="481" align="left">
-Both you and the stream have modifications to&nbsp; the same resource.
+Both you and the repository have modifications to the same resource.
 </TD>
 </TR>
 </TABLE>
