Added "Using a different version of Ant".

--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -19,11 +19,16 @@ resources in the workspace.&nbsp;&nbsp;</P>
 <P CLASS="Para">
 More information about Ant is available at <a href="http://jakarta.apache.org/ant/index.html" target="_blank">jakarta.apache.org/ant/index.html</a>.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-22.htm"><br>
-Builds</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-89.htm"><br>
-Running Ant</a></p>
+Builds</a><br>
+<a href="../concepts/cexttools.htm">External tools</a>
+</p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-89.htm">Running Ant</a><br>
+<a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
+</p>
 <p>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm">
+<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
