--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -39,15 +39,25 @@ check box in the previous step, the Log Console displays any applicable executio
 after the script runs.</p>
   </li>
 </ol>
+<p>Once a script is run through the Run Ant pop-up menu it is automatically configured as an external tool.
+In order to change the configuration or re-run the script, go to the <b>Run > External Tools</b> menu.
+</p>
 
+<br>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+</a><a href="../concepts/cantsup.htm">Ant support<br>
+</a><a href="../concepts/concepts-22.htm">Builds</a><br>
+</a><a href="../concepts/cexttools.htm">External tools</a>
+</p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="../concepts/concepts-22.htm">Builds</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-90.htm">Running external tools</a><br>
+<a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
+</p>
 
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-<br><a href="../reference/ref-7.htm">Ant support</a></p>
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm">
+<img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
