Added "Expanding the Ant classpath".

--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -24,6 +24,7 @@ Builds</a><br>
 </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-89.htm">Running Ant</a><br>
+<a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
 <a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
 </p>
 <p>
