--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
@@ -77,6 +77,7 @@ effect in the script execution.</p>
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="./tasks-89.htm">Running Ant scripts</a><br>
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
+<a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
 </P>
 
 <p>&nbsp;<br>
