--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -52,6 +52,7 @@ In order to change the configuration or re-run the script, go to the <b>Run > Ex
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
+<a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
 <a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
 </p>
 
