More external tools contents.

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
@@ -48,16 +48,16 @@ it can be easily ported to other Operating Systems:</p>
   </li>
   <li><p CLASS="Para">Enter a name for your external tool (e.g. External Ant).</p>
   </li>
-  <li><p CLASS="Para">Click on the <b>Browser File System</b> button.</p>
+  <li><p CLASS="Para">Click on the <b>Browse File System</b> button.</p>
   </li>
   <li><p CLASS="Para">Find and select a file called <b>ant.bat</b> (it should be 
   in the bin folder of your Ant installation).</p>
   </li>
-  <li><p CLASS="Para">In the Tool Arguments field enter a arguments for your 
+  <li><p CLASS="Para">In the <b>Tool Arguments</b> field enter a arguments for your 
   script like you would normally enter for running the script outside of the 
   workbench.</p>
   </li>
-  <li><p CLASS="Para">In the Working directory field enter the directory of your 
+  <li><p CLASS="Para">In the <b>Working directory</b> field enter the directory of your 
   script.</p>
   </li>
   <li><p CLASS="Para">To run the script go to the menu <b>Run &gt; External Tools &gt; 
