--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
@@ -11,6 +11,37 @@
 <H1 CLASS="Head">
 Running external tools</H1>
 
+<p CLASS="Para">The workbench provides a mechanism for running tools that are 
+not part of the it. The following
+steps illustrate how to configure an external tool:</p>
+<ul>
+  <li><p CLASS="Para">Go to the menu <b>Run &gt; External Tools &gt; Configure</b>.</p>
+  </li>
+  <li><p CLASS="Para">Click on the <b>New</b> button.</p>
+  </li>
+  <li><p CLASS="Para">Enter a name for your external tool (e.g. My External Tool).</p>
+  </li>
+  <li><p CLASS="Para">Click on the <b>Browse File System</b> button.</p>
+  </li>
+  <li><p CLASS="Para">Find the tool you want to run (e.g. in Windows it is 
+  usually a file with the extension <b>.exe</b> or <b>.bat</b>).</p>
+  </li>
+  <li><p CLASS="Para">In the <b>Tool Arguments</b> field enter the necessary 
+  arguments for the tool (optional).</p>
+  </li>
+  <li><p CLASS="Para">In the <b>Working directory</b> field enter the working directory 
+  for the tool (optional).</p>
+  </li>
+  <li><p CLASS="Para">Click <b>OK</b>.</p>
+  </li>
+  <li><p CLASS="Para">To run the tool go to the menu <b>Run &gt; External Tools &gt; 
+  My External Tool</b>.</p>
+  </li>
+</ul>
+<p CLASS="Para">It is also possible to use an external tool to build a project. 
+Select the desired project, from its pop-up menu choose <b>Properties &gt; External 
+Tools Builders</b> and configure accordingly.</p>
+
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 </a><a href="../concepts/cexttools.htm">External tools</a><br>
 </P>
@@ -20,7 +51,8 @@ Running external tools</H1>
 </p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm">
+<img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
