Added "Adding new tasks and types".

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
@@ -78,6 +78,7 @@ effect in the script execution.</p>
 <a href="./tasks-89.htm">Running Ant scripts</a><br>
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
 <a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
+<a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br>
 </P>
 
 <p>&nbsp;<br>
