--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -26,6 +26,7 @@ Builds</a><br>
 <a href="../tasks/tasks-89.htm">Running Ant</a><br>
 <a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
 <a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
+<a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br>
 </p>
 <p>
 <a href="../hglegal2002.htm">
