--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -16,30 +16,31 @@ Renaming method parameters</h1>
 the parameter's declaration as well as all references to the parameters
 inside the method body.</div>
 
-<div CLASS="Para">Use the&nbsp;<span CLASS="Label"><b>Modify Parameters</span></b>
-command to rename one or more parameters of a method as well as all references
-to these parameters.</div>
+<div CLASS="Para">
+  <p>&nbsp;</p>
+  <p>Use the&nbsp;<span CLASS="Label"><b>Modify Parameters</b></span> command 
+    to rename one or more parameters of a method as well as all references to 
+    these parameters.</p>
+</div>
 
-<ol>
-<li CLASS="Para">
-Select the method in a Java view (the Outline view, for example)</li>
-
-<li CLASS="Para">
-From the method's pop-up menu, select <b>Refactor > Modify Parameters</b>
-or, from the menu bar, select <b>Refactor > Modify Parameters</b></li>
-</ol>
-
-<div CLASS="Para"><b>Note: </b>these menu entries will no be active if
-the method has no parameters.</div>
-To rename a single parameter it is often easier to:
-<ol>
-<li>
-Select the parameter in the Java editor.</li>
-
-<li>
-From the editor's pop-up menu, select <b>Refactor > Rename</b>.</li>
-</ol>
-<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
+<ul>
+  <li> Select the method in a Java view (the Outline view, for example)</li>
+  <li> From the method's pop-up menu, select <b>Refactor > Modify Parameters</b> 
+    or, from the menu bar, select <b>Refactor > Modify Parameters</b> 
+    <div CLASS="Para"><b>Note: </b>these menu entries will no be active if the 
+      method has no parameters.</div>
+  </li>
+  <li>Select a parameter, press the <b>Edit</b> button, enter a new name for the 
+    parameter and press OK</li>
+</ul>
+To rename a single parameter, it is often easier to: 
+<ul>
+  <li> Select the parameter in the Java editor.</li>
+  <li> From the editor's pop-up menu, select <b>Refactor > Rename</b> to open 
+    the Rename refactoring wizard.</li>
+</ul>
+<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159> 
+</p>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-96.htm">Renaming a method</a>
