Fixed html errors

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -44,9 +44,9 @@ In order to change the configuration or re-run the script, go to the <b>Run > Ex
 </p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-</a><a href="../concepts/cantsup.htm">Ant support<br>
-</a><a href="../concepts/concepts-22.htm">Builds</a><br>
-</a><a href="../concepts/cexttools.htm">External tools</a>
+<a href="../concepts/cantsup.htm">Ant support</a><br>
+<a href="../concepts/concepts-22.htm">Builds</a><br>
+<a href="../concepts/cexttools.htm">External tools</a>
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
