--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
@@ -98,7 +98,7 @@ with the other two choices.</P>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-115.htm">Synchronizing with the repository</a><br>
 <a href="tasks-113.htm">Updating</a><br>
-<a href="tasks-114.htm">Committing<a><br>
+<a href="tasks-114.htm">Committing</a><br>
 <a href="tasks-100b.htm">Merging</a><br>
 <a href="tasks-68.htm">Comparing resources</a><br>
 <a href="tasks-68dg.htm">Merging changes in the comparison editor</a>
