--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
@@ -58,9 +58,9 @@ Adding a type is very similar to adding a task and only requires small changes
 to the above steps.</P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-</a><a href="../concepts/cantsup.htm">Ant support<br>
-</a><a href="../concepts/concepts-22.htm">Builds</a><br>
-</a><a href="../concepts/cexttools.htm">External tools</a>
+<a href="../concepts/cantsup.htm">Ant support</a><br>
+<a href="../concepts/concepts-22.htm">Builds</a><br>
+<a href="../concepts/cexttools.htm">External tools</a>
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
