--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
@@ -43,7 +43,7 @@ Select the desired project, from its pop-up menu choose <b>Properties &gt; Exter
 Tools Builders</b> and configure accordingly.</p>
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-</a><a href="../concepts/cexttools.htm">External tools</a><br>
+<a href="../concepts/cexttools.htm">External tools</a><br>
 </P>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
