[TB] converted to sentence style capitalization

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Debugging Your Programs</title>
+<title>Debugging your programs</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Debugging Your Programs</H1>
+Debugging your programs</H1>
 <P CLASS="Para">
 In this section, you will debug a Java program.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
