--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -3,7 +3,7 @@
   "DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title>Preparing the Workbench</title>
+    <title>Preparing the workbench</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
@@ -11,14 +11,14 @@
 
   <body>
 
-    <h1 class="Head">Getting Started</h1>
+    <h1 class="Head">Getting started</h1>
 
     <p class="Para">
       This tutorial is designed to get you started on using the
       Java Development Toolkit (JDT) in the workbench.
     </p>
 
-    <h1 class="Head">Preparing the Workbench</h1>
+    <h1 class="Head">Preparing the workbench</h1>
 
     <p class="Para">
       In this section, you will verify that the workbench is properly set up
@@ -48,7 +48,7 @@
 
     <div class="Topic">
 
-    <h2>Verifying JRE Installation and Classpath Variables</h2>
+    <h2>Verifying JRE installation and classpath variables</h2>
 
     <ol>
       <li>
@@ -72,7 +72,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-1.gif" alt="Installed JREs Preference Page" />
+          <img src="../images/qs-1.gif" alt="Installed JREs preference page" />
         </div>        
       </li>
 
@@ -92,7 +92,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-2.gif" alt="Workbench Preference Page" />
+          <img src="../images/qs-2.gif" alt="Workbench preference page" />
         </div>
       </li>
 
@@ -112,7 +112,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-3.gif" alt="New Project Preference Page" />
+          <img src="../images/qs-3.gif" alt="New project preference page" />
         </div>
       </li>
 
@@ -127,7 +127,7 @@
 
     <div class="Topic">
 
-    <h2>Installing the JDT Example Plug-Ins</h2>
+    <h2>Installing the JDT example plug-ins</h2>
 
     <p class="Para">
       The JDT example plug-ins contribute a New Wizard that
