--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -3,14 +3,14 @@
   "DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title>Browsing Java Elements with the Package Explorer</title>
+    <title>Browsing Java elements with the package explorer</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
 
   <body>
-    <h1 class="Head">Browsing Java Elements with the Package Explorer</h1>
+    <h1 class="Head">Browsing Java elements with the package explorer</h1>
 
     <p class="Para">
       In this section, you will browse Java elements within the JUnit project.
@@ -40,7 +40,7 @@
     </ol>
       
     <div class="Screenshot">
-      <img src="../images/qs-7.gif" alt="Package Explorer" />
+      <img src="../images/qs-7.gif" alt="Package explorer" />
     </div>
 
     <div class="copyright">
