--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -3,7 +3,7 @@
   "DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title>Editing Java Elements</title>
+    <title>Editing Java elements</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1"
       type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1 class="Head">Editing Java Elements</h1>
+    <h1 class="Head">Editing Java elements</h1>
 
     <p class="Para">
       In this section, you will edit Java elements in the workbench.
@@ -19,7 +19,7 @@
 
     <div class="Topic">
 
-    <h2>Using the Outline View</h2>
+    <h2>Using the outline view</h2>
 
     <ol>
       <li>
@@ -44,7 +44,7 @@
         </ul>
 
         <div class="Snapshot">
-          <img src="../images/qs-8.gif" alt="Syntax Highlighting" />
+          <img src="../images/qs-8.gif" alt="Syntax highlighting" />
         </div>
       </li>
 
@@ -60,7 +60,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-9.gif" alt="Outline View" />
+          <img src="../images/qs-9.gif" alt="Outline view" />
         </div>
       </li>
 
@@ -74,7 +74,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-10.gif" alt="Outline View Tool Bar" />
+          <img src="../images/qs-10.gif" alt="Outline view tool bar" />
         </div>
       </li>
 
@@ -102,7 +102,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-11.gif" alt="Show Selected Element Only Tool Bar Button" />
+          <img src="../images/qs-11.gif" alt="Show selected element only tool bar button" />
         </div>
       </li>
 
@@ -122,7 +122,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-12.gif" alt="Range Indicator" />
+          <img src="../images/qs-12.gif" alt="Range indicator" />
         </div>
       </li>
     </ol>
@@ -131,7 +131,7 @@
 
 <div class="Topic">
 
-    <h2>Adding Methods and Using Code Assist</h2>
+    <h2>Adding methods and using code assist</h2>
 
     <ol>
       <li>
@@ -156,7 +156,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-13.gif" alt="New Method in Outline View" />
+          <img src="../images/qs-13.gif" alt="New method in outline view" />
         </div>
       </li>
 
@@ -173,7 +173,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-14.gif" alt="Error Propagation in Package Explorer" />
+          <img src="../images/qs-14.gif" alt="Error propagation in package explorer" />
         </div>
       </li>
  
@@ -201,7 +201,7 @@
 
 <div class="Topic">
 
-    <h2>Deleting and Replacing a Method from the Local History</h2>
+    <h2>Deleting and replacing a method from the local history</h2>
 
     <p class="Para">
       In this section, you will use the local history feature to switch
@@ -254,7 +254,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-15.gif" alt="Replace from Local History" />
+          <img src="../images/qs-15.gif" alt="Replace from local history" />
         </div>
       </li>
 
@@ -281,7 +281,7 @@
 
 <div class="Topic">
 
-    <h2>Using Content Assist</h2>
+    <h2>Using content assist</h2>
 
     <ol>
       <li>
@@ -323,7 +323,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-16.gif" alt="Content Assist" />
+          <img src="../images/qs-16.gif" alt="Content assist" />
         </div>
       </li>
 
@@ -341,7 +341,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-17.gif" alt="Content Assist Filtered" />
+          <img src="../images/qs-17.gif" alt="Content assist filtered" />
         </div>
 
       </li>
@@ -376,7 +376,7 @@ assert</pre>
 
 <div class="Topic">
 
-    <h2>Using Import Assist</h2>
+    <h2>Using import assist</h2>
 
     <ol>
       <li>
@@ -395,7 +395,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-18.gif" alt="Outline View Context Menu" />
+          <img src="../images/qs-18.gif" alt="Outline view context menu" />
         </div>
       </li>
 
@@ -411,7 +411,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-19.gif" alt="Organize Imports" />
+          <img src="../images/qs-19.gif" alt="Organize imports" />
         </div>
         
         <p class="Para">
@@ -438,7 +438,7 @@ assert</pre>
 
 <div class="Topic">
 
-    <h2>Extract a Method</h2>
+    <h2>Extract a method</h2>
 
     <p class="Para">
       In this section, you will improve the code of the constructor of
@@ -473,7 +473,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-20.gif" alt="Context Menu Extract Method" />
+          <img src="../images/qs-20.gif" alt="Context menu extract method" />
         </div>
       </li>
 
@@ -485,7 +485,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-21.gif" alt="Extract Method Wizard Page 1" />
+          <img src="../images/qs-21.gif" alt="Extract method wizard page 1" />
         </div>
       </li>
 
@@ -499,7 +499,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-22.gif" alt="Extract Method Wizard Page 2" />
+          <img src="../images/qs-22.gif" alt="Extract method wizard page 2" />
         </div>
       </li>
 
@@ -509,7 +509,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
  
         <div class="Snapshot">
-          <img src="../images/qs-23.gif" alt="Extracted Method" />
+          <img src="../images/qs-23.gif" alt="Extracted method" />
         </div>
       </li>
     </ol>
@@ -517,7 +517,7 @@ while (Test.class.isAssignableFrom(superClass)) {
 </div>
 <div class="Topic">
 
-    <h2>Using Open on Selection and Open on Type Hierarchy</h2>
+    <h2>Using open on selection and open on type hierarchy</h2>
 
     <ol>
       <li>
@@ -548,7 +548,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p></div>
 
         <div class="Snapshot">
-          <img src="../images/qs-24.gif" alt="Menu Open Declaration" />
+          <img src="../images/qs-24.gif" alt="Menu open declaration" />
         </div>
 
         <p class="Para">
@@ -557,7 +557,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-25.gif" alt="Opened Declaration" />
+          <img src="../images/qs-25.gif" alt="Opened declaration" />
         </div>
       </li>
 
@@ -576,7 +576,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </ul>
 
         <div class="Snapshot">
-          <img src="../images/qs-26.gif" alt="Menu Open Type Hierarchy" />
+          <img src="../images/qs-26.gif" alt="Menu open type hierarchy" />
         </div>
       </li>
 
@@ -586,7 +586,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-27.gif" alt="Type Hierarchy View" />
+          <img src="../images/qs-27.gif" alt="Type hierarchy view" />
         </div>
 
         <div class="Note">
