--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Running Your Programs</title>
+<title>Running your programs</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Running Your Programs</H1>
+Running your programs</H1>
 <P CLASS="Para">
 In this section, you will learn more about running Java programs in the workbench.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
