--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Evaluating Expressions</title>
+<title>Evaluating expressions</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Evaluating Expressions</H1>
+Evaluating expressions</H1>
 <P CLASS="Para">
 In this section, you will evaluate expressions from your Java code.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
