--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Evaluating Snippets</title>
+<title>Evaluating snippets</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Evaluating Snippets</H1>
+Evaluating snippets</H1>
 <P CLASS="Para">
 In this section, you will evaluate Java expressions using the Java scrapbook. The scrapbook can be used to experiment with Java code fragments before putting them into your program.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
