--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -3,13 +3,13 @@
   "DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title>Creating Your First Java Project</title>
+    <title>Creating your first Java project</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
   <body>
-    <h1 class="Head">Creating Your First Java Project</h1>
+    <h1 class="Head">Creating your first Java project</h1>
 
     <p class="Para">
       In this section, you will create a new Java project.
@@ -52,7 +52,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-4.gif" alt="Java Perspective" />
+          <img src="../images/qs-4.gif" alt="Java perspective" />
         </div>
       </li>
 
@@ -103,7 +103,7 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
         </div>
 
         <div class="Snapshot">
-          <img src="../images/qs-5.gif" alt="Import Hierarchy List" />
+          <img src="../images/qs-5.gif" alt="Import hierarchy list" />
         </div>
       </li>
 
@@ -131,7 +131,7 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-6.gif" alt="Package Explorer" />
+          <img src="../images/qs-6.gif" alt="Package explorer" />
         </div>
       </li>
     </ol>
