--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -8,7 +8,17 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">JUnit&nbsp;<br>
-  <img src="../ngibmcpy.gif"> </H1>
+<H1 CLASS="Head">JUnit&nbsp;</H1>
+
+<ul>
+  <li>You can re-load your test code into a running VM by keeping the VM running 
+    after a test has run. Select the <b>Keep JUnit running after a test run when 
+    debugging</b> checkbox on the Launch Configuration page.</li>
+  <li>You can keep the JUnit view as a fast view and make it show the results 
+    only where there are failures or errors. Select the <b>Window &gt; Preferences 
+    &gt; Java &gt; JUnit&gt; Show the JUnit results view only when an error or 
+    failure occurrs</b> checkbox.</li>
+</ul>
+<p><img src="../ngibmcpy.gif"> </p>
 </BODY>
 </HTML>
