--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-1.htm
@@ -1,24 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Changing the Appearance of the Java Tools</title>
+  
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Changing the Appearance of the Java Tools</H1>
-<P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
 
-</P>
+  
+  <meta http-equiv="Content-Style-Type" content="text/css">
 
 
 
 
+  
+  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>Changing the appearance of the Java tools</title>
 
-</BODY>
-</HTML>
+  </head>
+<body bgcolor="#ffffff">
+<h1 class="Head">
+Changing the appearance of the Java tools</h1>
+<p><br></p>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+</body></html>
