--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
@@ -1,42 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<head>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Showing and hiding files</title>
-</head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
-<div class=Section1>
 
-<h1>Showing and hiding files</h1>
+  <meta http-equiv="Content-Style-Type" content="text/css">
 
-<p class=para>You can filter the file display in the Package Explorer view.</p>
 
-<p class=para><img width=159 height=27 id="_x0000_i1025"
-src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
-
-<p class=para><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="tasks-3.htm">Showing and hiding system files</a><br>
-<a href="tasks-4.htm">Showing and hiding CLASS files generated for inner types</a>&nbsp;<br>
-<a href="tasks-5.htm">Showing and hiding libraries</a><br>
-<a href="tasks-6.htm">Showing single elements or whole files</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
-</div>
-
-</body>
-
-</html>
+  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Showing and hiding files</title></head><body bgcolor="white" lang="EN-US" link="blue" vlink="blue" style="tab-interval:.5in">
+<div class="Section1"><h1>Showing and hiding files</h1><p class="para">You can filter the file display in the Package Explorer.</p><p class="para"><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p><p class="para"><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p><p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p><p><a href="tasks-3.htm">Showing and hiding system files</a><br><a href="tasks-4.htm">Showing and hiding CLASS files generated for inner types</a>&nbsp;<br><a href="tasks-5.htm">Showing and hiding libraries</a><br><a href="tasks-6.htm">Showing single elements or whole files</a></p><p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p><p><a href="../reference/ref-90.htm">Package Explorer</a></p></div>
+<p><br></p>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+</body></html>
